# InTheMemoryTest

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: clients.ipynb  clients_analyse.ipynb  products.ipynb  products_analyse.ipynb  stores_analyse.ipynb  stores_exploration.ipynb  transactions_analyse.ipynb
src/test_technique_itm/: __main__.py  common.py
src/test_technique_itm/gold/: clients_gold.py  products_gold.py  stores_gold.py  transactions_gold.py
src/test_technique_itm/silver/: clients_silver.py  products_silver.py  stores_silver.py  transactions_silver.py
test/: test import.py  test_stores_silver.py
